# oracles_and_followers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
stackerlberg/core/: envs.py
stackerlberg/envs/: matrix_game.py  test_envs.py
stackerlberg/models/: custom_fully_connected_torch_network.py  linear_torch_model.py
stackerlberg/tests/core/: test_envs.py
stackerlberg/tests/envs/: test_complete_envs.py  test_hypernetwork_wrapper.py  test_matrix_game.py  test_matrix_game_obsq.py  test_matrix_game_obsq_discrete.py  test_threaded_envs.py
stackerlberg/tests/train/: test_stackerlberg_save_load_checkpoints.py  test_stackerlberg_trainable.py  test_trainable_utils.py
stackerlberg/train/: callbacks.py  make_env.py  policies.py  run_experiment.py  utils.py
stackerlberg/train/experiments/: calculate_pretrain_targets.py  configurations.py  debug_callbacks.py  pretrain_checkpoint_prisoners_dilemma_0.pkl
stackerlberg/trainers/: callbacks.py  pretrain_checkpoint_prisoners_dilemma_1.pkl  stackerlberg_trainable.py  stackerlberg_trainable_es.py  utils.py
stackerlberg/trainers/checkpoints_for_es/: pretrain_checkpoint_prisoners_dilemma_1.pkl  pretrain_checkpoint_prisoners_dilemma_2.pkl  pretrain_checkpoint_prisoners_dilemma_3.pkl  pretrain_checkpoint_prisoners_dilemma_4.pkl  (+1 more)
stackerlberg/utils/: utils.py
stackerlberg/wrappers/: action_to_dist_wrapper.py  dict_to_discrete_obs_wrapper.py  learning_dynamics_wrapper.py  observed_queries_wrapper.py  repeated_matrix_hypernetwork.py  tabularq_wrapper.py
